# hswaystatus

./: .gitignore  BatteryWidget.hs  ClockWidget.hs  LICENSE  Main.hs  Swaybar.hs  UPower.hs  hswaystatus.cabal
