cabal-version:       2.4

name:                hswaystatus
version:             0.1.0.0
synopsis:            Sway status line generator
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Yiding Jia
maintainer:          yiding.jia@gmail.com
-- copyright:
-- category:
extra-source-files:

executable hswaystatus
  main-is:             Main.hs
  other-modules:
    BatteryWidget,
    ClockWidget,
    Swaybar,
    UPower
  -- other-extensions:
  build-depends:
    base ^>=4.12.0.0,
    bytestring,
    containers,
    aeson,
    data-default,
    dbus,
    reflex,
    text,
    text-format,
    time,
    unix
  -- hs-source-dirs:
  default-language:    Haskell2010
